[package]
name = "servant-macro"
version = "0.1.0"
authors = ["automan.yang <automanyang@gmail.com>"]
description = "servant-macro是servant库的辅助库，本库定义了四种类型的接口属性，会自动生成客户端和服务端的代码，方便应用开发。"
repository = "https://github.com/automanyang/servant-macro"
readme = "README.md"
keywords = ["rpc"]
license = "MIT"
license-file = "LICENSE-MIT"
edition = "2018"

[lib]
proc-macro = true

[features]
invoke = []
query = []
notify = []
report = []
adapter = []
terminal = []

# default = ["invoke", "query", "adapter", "terminal"]
# full = ["invoke", "query", "report", "notify", "adapter", "terminal"]

[dependencies]
syn = { version = "^1.0.11", features = ["default"] }
quote = "^1.0.2"
proc-macro2 = "^1.0.6"

[dev-dependencies]
test-case = "^1.0.0-alpha-1"

