[package]
name = "servant-macro"
version = "0.1.0"
authors = ["automan.yang <automanyang@gmail.com>"]
description = "Reserve the name."
repository = "https://github.com/automanyang/servant-macro"
readme = "README.md"
keywords = ["rpc"]
categories = ["network-programming"]
license = "MIT"
# license-file = "LICENSE-MIT"
edition = "2018"

[lib]
proc-macro = true

[features]
server = []
client = []

[dependencies]
syn = { version = "^1.0.13", features = ["default"] }
quote = "^1.0.2"
proc-macro2 = "^1.0.6"

[dev-dependencies]
test-case = "^1.0.0-alpha-1"

